<resources>
    <string name="app_name">Linkedin</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up1">Sign Up</string>
    <string name="don_t_have_an_account">don\’t have an account?</string>
    <string name="login">Login</string>
    <string name="input_password">Input Password</string>
    <string name="password">Password</string>
    <string name="input_email">Input Email</string>
    <string name="email">Email</string>
    <string name="linked_in_image">linked_in image</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="upload_image">upload image</string>
    <string name="phone_number">Phone Number</string>
    <string name="skills">Skills</string>
</resources>