<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".LoginPage"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_fulllinkedin"
        android:contentDescription="@string/linked_in_image"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/email"
        />

    <EditText
        android:id="@+id/text_email1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/input_email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/text_password1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:background="@drawable/input_border"
        android:hint="@string/input_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/login"
        android:background="@drawable/blue_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="forgot password?"
        android:textColor="@color/lightBlue"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/don_t_have_an_account"
        />
    <Button
        android:id="@+id/signup_btn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    android:gravity="center"
        android:textColor="@color/ClickBlue"
        android:background="@drawable/line_button"
    android:text="@string/sign_up"

    />

</LinearLayout>