<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    tools:context=".SignUp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textSize="25sp"
        android:textColor="@color/pepsiBlue"
        android:gravity="center"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/username"
        android:textSize="18sp"
        android:background="@drawable/input_border"
        android:autofillHints="username" />
    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="18sp"
        android:background="@drawable/input_border"
        />
    <EditText
        android:autofillHints="Phone Number"
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:textSize="18sp"
        android:background="@drawable/input_border"
        />
    <EditText
        android:autofillHints="password"
        android:id="@+id/text_Password"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="18sp"
        android:background="@drawable/input_border"
        app:passwordToggleEnabled="true"
        />
    <EditText
        android:autofillHints="password"
        android:id="@+id/text_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textSize="18sp"
        android:background="@drawable/input_border"
        app:passwordToggleEnabled="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        >

        <Spinner
            android:id="@+id/items_selection"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:entries="@array/gender"
            />
        <ImageView
            android:id="@+id/imageView"
            android:layout_weight="1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_person_add_alt_1_24"
            android:layout_margin="10dp"
            android:contentDescription="@string/upload_image"
            />
    </LinearLayout>
        <EditText
            android:background="@drawable/input_border"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/skills"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minLines="2"
            android:inputType="textMultiLine"
            android:gravity="top"
            />
    <EditText
        android:background="@drawable/input_border"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tell us about yourself ..."
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:minLines="5"
        android:inputType="textMultiLine"
        android:gravity="top"
        />

    <Button
        android:id="@+id/signup_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:background="@color/ClickBlue"
        android:text="@string/sign_up"
        />
</LinearLayout>

</ScrollView>